--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,11 @@ body {
     margin-right: 900px;
     width: 50em;
 }
+h1 {
+  display: block
+  margin-right: 40%;
+  margin-left: 10%;
+}
 
 img {
     width: 115%;
@@ -43,6 +48,9 @@ h6 {
   margin-left: 10%;
 }
 h2 {
+  font-size: 10px;
+}
+figcaption {
   font-size: 10px;
 }
 div.background-text-box {}
