--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,6 +49,9 @@ h6 {
 }
 h2 {
   font-size: 10px;
+  display: block
+  margin-right: 40%;
+  margin-left: 10%;
 }
 figcaption {
   font-size: 10px;
